--- a/src/index.css
+++ b/src/index.css
@@ -26,8 +26,12 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  flex-direction: column;
   min-width: 320px;
   min-height: 100vh;
+  height: 100%;
+  
+
 }
 
 h1 {
